# chat-application-c

./: CMakeLists.txt  README.md
include/: client.h  common.h  server.h  utils.h
src/: client.c  server.c  utils.c
